<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cantidad"
        android:textAllCaps="true" />


    <Button
        android:text="@string/increment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="increment"
        android:id="@+id/increment"/>
    <EditText
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/defaultQuantity"
        android:inputType=""/>
    <Button
        android:text="@string/decrement"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="decrement"
        android:id="@+id/decrement"/>
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:text="@string/precio" />


    <EditText
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/defaultPrice"
        android:inputType=""/>

    <Button
        android:id="@+id/orderbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pedir"
        android:onClick="submitOrder"/>

</LinearLayout>
